--- a/404.html
+++ b/404.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="zh-cn">
-  <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+  <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width" />
   <script
     type="application/javascript"
-    src='http://localhost:1313/js/theme-mode.js'
+    src='http://192.168.10.88/js/theme-mode.js'
   ></script>
-  <link rel="stylesheet" href='http://localhost:1313/css/frameworks.min.css' />
-  <link rel="stylesheet" href='http://localhost:1313/css/github.min.css' />
-  <link rel="stylesheet" href='http://localhost:1313/css/github-style.css' />
-  <link rel="stylesheet" href='http://localhost:1313/css/light.css' />
-  <link rel="stylesheet" href='http://localhost:1313/css/dark.css' />
-  <link rel="stylesheet" href='http://localhost:1313/css/syntax.css' />
+  <link rel="stylesheet" href='http://192.168.10.88/css/frameworks.min.css' />
+  <link rel="stylesheet" href='http://192.168.10.88/css/github.min.css' />
+  <link rel="stylesheet" href='http://192.168.10.88/css/github-style.css' />
+  <link rel="stylesheet" href='http://192.168.10.88/css/light.css' />
+  <link rel="stylesheet" href='http://192.168.10.88/css/dark.css' />
+  <link rel="stylesheet" href='http://192.168.10.88/css/syntax.css' />
   
   <link rel="stylesheet" href="/your%20css%20file%20name" />
   
@@ -30,7 +30,7 @@
   content=""
 />
 <meta name="robots" content="noodp" />
-<link rel="canonical" href="http://localhost:1313/404.html" />
+<link rel="canonical" href="http://192.168.10.88/404.html" />
 
 
 <meta name="twitter:card" content="summary" />
@@ -42,11 +42,11 @@
   name="twitter:description"
   content=""
 />
-<meta name="twitter:site" content="http://localhost:1313/" />
+<meta name="twitter:site" content="http://192.168.10.88/" />
 <meta name="twitter:creator" content="" />
 <meta
   name="twitter:image"
-  content="http://localhost:1313/"
+  content="http://192.168.10.88/"
 />
 
 
@@ -62,11 +62,11 @@
   property="og:description"
   content=""
 />
-<meta property="og:url" content="http://localhost:1313/404.html" />
+<meta property="og:url" content="http://192.168.10.88/404.html" />
 <meta property="og:site_name" content="404 Page not found" />
 <meta
   property="og:image"
-  content="http://localhost:1313/"
+  content="http://192.168.10.88/"
 />
 <meta property="og:image:width" content="2048" />
 <meta property="og:image:height" content="1024" />
@@ -126,7 +126,7 @@
       class="Header-item mobile-none"
       style="margin-top: -4px; margin-bottom: -4px"
     >
-      <a class="Header-link" href="http://localhost:1313/" aria-label="Home">
+      <a class="Header-link" href="http://192.168.10.88/" aria-label="Home">
         <svg
           class="octicon"
           height="32"
@@ -189,7 +189,7 @@
                 placeholder="Search"
                 autocomplete="off"
               />
-              <input type="hidden" name="q" value="site:http://localhost:1313/" />
+              <input type="hidden" name="q" value="site:http://192.168.10.88/" />
               <div
                 class="js-jump-to-suggestions-container jump-to-suggestions overflow-hidden position-absolute"
               >
@@ -217,7 +217,7 @@
     <div
       class="Header-item Header-item--full flex-justify-center d-md-none position-relative"
     >
-      <a class="Header-link" href="http://localhost:1313/" aria-label="Home">
+      <a class="Header-link" href="http://192.168.10.88/" aria-label="Home">
         <svg
           class="octicon octicon-mark-github v-align-middle"
           height="32"
