--- a/404.html
+++ b/404.html
@@ -5,14 +5,14 @@
   <meta name="viewport" content="width=device-width" />
   <script
     type="application/javascript"
-    src='http://blog.521567.xyz/js/theme-mode.js'
+    src='https://blog.521567.xyz/js/theme-mode.js'
   ></script>
-  <link rel="stylesheet" href='http://blog.521567.xyz/css/frameworks.min.css' />
-  <link rel="stylesheet" href='http://blog.521567.xyz/css/github.min.css' />
-  <link rel="stylesheet" href='http://blog.521567.xyz/css/github-style.css' />
-  <link rel="stylesheet" href='http://blog.521567.xyz/css/light.css' />
-  <link rel="stylesheet" href='http://blog.521567.xyz/css/dark.css' />
-  <link rel="stylesheet" href='http://blog.521567.xyz/css/syntax.css' />
+  <link rel="stylesheet" href='https://blog.521567.xyz/css/frameworks.min.css' />
+  <link rel="stylesheet" href='https://blog.521567.xyz/css/github.min.css' />
+  <link rel="stylesheet" href='https://blog.521567.xyz/css/github-style.css' />
+  <link rel="stylesheet" href='https://blog.521567.xyz/css/light.css' />
+  <link rel="stylesheet" href='https://blog.521567.xyz/css/dark.css' />
+  <link rel="stylesheet" href='https://blog.521567.xyz/css/syntax.css' />
   
   <link rel="stylesheet" href="/your%20css%20file%20name" />
   
@@ -30,7 +30,7 @@
   content=""
 />
 <meta name="robots" content="noodp" />
-<link rel="canonical" href="http://blog.521567.xyz/404.html" />
+<link rel="canonical" href="https://blog.521567.xyz/404.html" />
 
 
 <meta name="twitter:card" content="summary" />
@@ -42,11 +42,11 @@
   name="twitter:description"
   content=""
 />
-<meta name="twitter:site" content="http://blog.521567.xyz/" />
+<meta name="twitter:site" content="https://blog.521567.xyz/" />
 <meta name="twitter:creator" content="" />
 <meta
   name="twitter:image"
-  content="http://blog.521567.xyz/"
+  content="https://blog.521567.xyz/"
 />
 
 
@@ -62,11 +62,11 @@
   property="og:description"
   content=""
 />
-<meta property="og:url" content="http://blog.521567.xyz/404.html" />
+<meta property="og:url" content="https://blog.521567.xyz/404.html" />
 <meta property="og:site_name" content="404 Page not found" />
 <meta
   property="og:image"
-  content="http://blog.521567.xyz/"
+  content="https://blog.521567.xyz/"
 />
 <meta property="og:image:width" content="2048" />
 <meta property="og:image:height" content="1024" />
@@ -126,7 +126,7 @@
       class="Header-item mobile-none"
       style="margin-top: -4px; margin-bottom: -4px"
     >
-      <a class="Header-link" href="http://blog.521567.xyz/" aria-label="Home">
+      <a class="Header-link" href="https://blog.521567.xyz/" aria-label="Home">
         <svg
           class="octicon"
           height="32"
@@ -189,7 +189,7 @@
                 placeholder="Search"
                 autocomplete="off"
               />
-              <input type="hidden" name="q" value="site:http://blog.521567.xyz/" />
+              <input type="hidden" name="q" value="site:https://blog.521567.xyz/" />
               <div
                 class="js-jump-to-suggestions-container jump-to-suggestions overflow-hidden position-absolute"
               >
@@ -217,7 +217,7 @@
     <div
       class="Header-item Header-item--full flex-justify-center d-md-none position-relative"
     >
-      <a class="Header-link" href="http://blog.521567.xyz/" aria-label="Home">
+      <a class="Header-link" href="https://blog.521567.xyz/" aria-label="Home">
         <svg
           class="octicon octicon-mark-github v-align-middle"
           height="32"
