--- a/index.html
+++ b/index.html
@@ -739,7 +739,11 @@ body:after {
 
 
                 <div name="summary" class="pinned-item-desc text-gray text-small d-block mt-2 mb-3">
-                  <p>关于我</p>
+                  <p>没有什么好关于的</p>
+<p><a href="https://xtn-blog.pages.dev/">https://xtn-blog.pages.dev/</a>
+<a href="https://blog.521567.xyz/">https://blog.521567.xyz/</a>
+<a href="https://vip.521567.xyz/">https://vip.521567.xyz/</a>
+<a href="https://521567.xyz/">https://521567.xyz/</a></p>
                 </div>
 
                 <p class="mb-0 f6 text-gray">
