--- a/404.html
+++ b/404.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href='https://blog.521567.xyz/css/light.css' />
   <link rel="stylesheet" href='https://blog.521567.xyz/css/dark.css' />
   <link rel="stylesheet" href='https://blog.521567.xyz/css/syntax.css' />
+  <link rel="stylesheet" href='https://blog.521567.xyz/css/code-fense.css' />
   
   <link rel="stylesheet" href="/your%20css%20file%20name" />
   
@@ -320,6 +321,9 @@ twikoo.init({
 <script defer src="https://cloud.umami.is/script.js" data-website-id="55d99053-831c-4954-81fd-81ba7ca26f20"></script>
 
 
+
+
+
 <div class="footer container-xl width-full p-responsive">
   
   <div
@@ -339,7 +343,9 @@ twikoo.init({
     <span id="busuanzi_container_site_uv">
       本站访客数 <span id="busuanzi_value_site_uv"></span> 人次
     </span>
-  </div></div>  
+  </div></div>
+
+  
     <script type="text/javascript">
       const host = window.location.host;
       const keyword = localStorage.getItem("keyword");
